--- a/frontend/hw2.ipynb
+++ b/frontend/hw2.ipynb
@@ -1,19 +1,49 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMzEZzV12MLIruBjM9gSnxc",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/amir3x0/Cloud-Project-Nvidia/blob/main/frontend/hw2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "mIk-LPykCRwE",
+        "outputId": "d71e32c8-90aa-41b1-e2c9-30313fd27e3b"
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "\n",
               "<!DOCTYPE html>\n",
@@ -101,6 +131,7 @@
               "        background-color: var(--navbar-background-color);\n",
               "        color: var(--navbar-text-color);\n",
               "        padding: 10px 50px;\n",
+              "        width: 90.8%;\n",
               "      }\n",
               "      .navbar .logo i {\n",
               "        margin-right: 10px;\n",
@@ -272,7 +303,7 @@
               "        border-bottom: none;\n",
               "      }\n",
               "      .dropdown-content a:hover {\n",
-              "        background-color: var(--button-background-color);\n",
+              "        //background-color: var(--button-background-color);\n",
               "        color: var(--button-text-color);\n",
               "      }\n",
               "      .dropdown:hover .dropdown-content {\n",
@@ -349,6 +380,7 @@
               "        align-items: center;\n",
               "        border-radius: 10px;\n",
               "        margin-top: 64px; /* Additional margin at the top */\n",
+              "        width:100%;\n",
               "      }\n",
               "      .footer-options button {\n",
               "        background-color: var(--button-background-color);\n",
@@ -398,6 +430,7 @@
               "        font-weight: bold;\n",
               "        background-color: var(--button-background-color);\n",
               "        color: var(--container-background-color);\n",
+              "        }\n",
               "      @keyframes fadeIn {\n",
               "        from {\n",
               "          opacity: 0;\n",
@@ -438,7 +471,16 @@
               "        transform: translateY(1px); /* Push effect */\n",
               "      }\n",
               "\n",
+              "\n",
               "      /* Adjusting the select dropdown to match the Nvidia theme */\n",
+              "\n",
+              "       #linksPerPageContainer {\n",
+              "            display: none; /* Initially hide the container */\n",
+              "            text-align: center; /* Align the text to the right */\n",
+              "\n",
+              "\n",
+              "      }\n",
+              "\n",
               "      #linksPerPage {\n",
               "        padding: 8px;\n",
               "        border-radius: 5px;\n",
@@ -485,7 +527,7 @@
               "          class=\"search-box\"\n",
               "          placeholder=\"Search Nvidia products, news, or information...\"\n",
               "        />\n",
-              "        <button onclick=\"search()\" class=\"search-button\">Search</button>\n",
+              "        <button <button onclick=\"toggleLinksPerPageVisibility(); search()\" class=\"search-button\">Search</button>\n",
               "        <button\n",
               "          onclick=\"clearSearch()\"\n",
               "          class=\"search-button\"\n",
@@ -495,17 +537,21 @@
               "        </button>\n",
               "        <div id=\"searchResults\" class=\"search-results\"></div>\n",
               "\n",
-              "        <!-- Dropdown for selecting number of links per page -->\n",
-              "        <select id=\"linksPerPage\" onchange=\"search()\">\n",
-              "          <option value=\"5\">5</option>\n",
-              "          <option value=\"10\">10</option>\n",
-              "          <option value=\"20\">20</option>\n",
-              "          <option value=\"50\">50</option>\n",
-              "        </select>\n",
+              "\n",
               "\n",
               "        <!-- Pagination Controls -->\n",
               "        <div id=\"pagination\"></div>\n",
               "      </div>\n",
+              "            <!-- Dropdown for selecting number of links per page -->\n",
+              "        <div id=\"linksPerPageContainer\">\n",
+              "         <span id=\"linksPerPageText\">Links per page:</span>\n",
+              "         <select id=\"linksPerPage\" onchange=\"search()\">\n",
+              "           <option value=\"5\">5</option>\n",
+              "           <option value=\"10\">10</option>\n",
+              "           <option value=\"20\">20</option>\n",
+              "           <option value=\"50\">50</option>\n",
+              "         </select>\n",
+              "        </div>\n",
               "\n",
               "      <div id=\"editIndexPage\" class=\"container\">\n",
               "        <h2>Edit Index</h2>\n",
@@ -804,6 +850,11 @@
               "        loadTerms(); // Reload the terms list\n",
               "      }\n",
               "\n",
+              "function toggleLinksPerPageVisibility() {\n",
+              "  const linksPerPageContainer = document.getElementById('linksPerPageContainer');\n",
+              "  linksPerPageContainer.style.display = 'block'; // Change 'show' to 'block'\n",
+              "}\n",
+              "\n",
               "      function changeFontSize(action) {\n",
               "        const body = document.body;\n",
               "        const currentSize = parseInt(window.getComputedStyle(body).fontSize);\n",
@@ -813,6 +864,7 @@
               "        } else if (action === \"decrease\") {\n",
               "          body.style.fontSize = `${Math.max(currentSize - 2, 10)}px`;\n",
               "        }\n",
+              "\n",
               "      // Initially load terms when the page loads\n",
               "      window.onload = function () {\n",
               "        loadTerms();\n",
@@ -823,14 +875,10 @@
               "    </script>\n",
               "  </body>\n",
               "</html>\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ],
       "source": [
@@ -922,6 +970,7 @@
         "        background-color: var(--navbar-background-color);\n",
         "        color: var(--navbar-text-color);\n",
         "        padding: 10px 50px;\n",
+        "        width: 90.8%;\n",
         "      }\n",
         "      .navbar .logo i {\n",
         "        margin-right: 10px;\n",
@@ -1093,7 +1142,7 @@
         "        border-bottom: none;\n",
         "      }\n",
         "      .dropdown-content a:hover {\n",
-        "        background-color: var(--button-background-color);\n",
+        "        //background-color: var(--button-background-color);\n",
         "        color: var(--button-text-color);\n",
         "      }\n",
         "      .dropdown:hover .dropdown-content {\n",
@@ -1170,6 +1219,7 @@
         "        align-items: center;\n",
         "        border-radius: 10px;\n",
         "        margin-top: 64px; /* Additional margin at the top */\n",
+        "        width:100%;\n",
         "      }\n",
         "      .footer-options button {\n",
         "        background-color: var(--button-background-color);\n",
@@ -1219,6 +1269,7 @@
         "        font-weight: bold;\n",
         "        background-color: var(--button-background-color);\n",
         "        color: var(--container-background-color);\n",
+        "        }\n",
         "      @keyframes fadeIn {\n",
         "        from {\n",
         "          opacity: 0;\n",
@@ -1259,7 +1310,16 @@
         "        transform: translateY(1px); /* Push effect */\n",
         "      }\n",
         "\n",
+        "\n",
         "      /* Adjusting the select dropdown to match the Nvidia theme */\n",
+        "\n",
+        "       #linksPerPageContainer {\n",
+        "            display: none; /* Initially hide the container */\n",
+        "            text-align: center; /* Align the text to the right */\n",
+        "\n",
+        "\n",
+        "      }\n",
+        "\n",
         "      #linksPerPage {\n",
         "        padding: 8px;\n",
         "        border-radius: 5px;\n",
@@ -1306,7 +1366,7 @@
         "          class=\"search-box\"\n",
         "          placeholder=\"Search Nvidia products, news, or information...\"\n",
         "        />\n",
-        "        <button onclick=\"search()\" class=\"search-button\">Search</button>\n",
+        "        <button <button onclick=\"toggleLinksPerPageVisibility(); search()\" class=\"search-button\">Search</button>\n",
         "        <button\n",
         "          onclick=\"clearSearch()\"\n",
         "          class=\"search-button\"\n",
@@ -1316,17 +1376,21 @@
         "        </button>\n",
         "        <div id=\"searchResults\" class=\"search-results\"></div>\n",
         "\n",
-        "        <!-- Dropdown for selecting number of links per page -->\n",
-        "        <select id=\"linksPerPage\" onchange=\"search()\">\n",
-        "          <option value=\"5\">5</option>\n",
-        "          <option value=\"10\">10</option>\n",
-        "          <option value=\"20\">20</option>\n",
-        "          <option value=\"50\">50</option>\n",
-        "        </select>\n",
+        "\n",
         "\n",
         "        <!-- Pagination Controls -->\n",
         "        <div id=\"pagination\"></div>\n",
         "      </div>\n",
+        "            <!-- Dropdown for selecting number of links per page -->\n",
+        "        <div id=\"linksPerPageContainer\">\n",
+        "         <span id=\"linksPerPageText\">Links per page:</span>\n",
+        "         <select id=\"linksPerPage\" onchange=\"search()\">\n",
+        "           <option value=\"5\">5</option>\n",
+        "           <option value=\"10\">10</option>\n",
+        "           <option value=\"20\">20</option>\n",
+        "           <option value=\"50\">50</option>\n",
+        "         </select>\n",
+        "        </div>\n",
         "\n",
         "      <div id=\"editIndexPage\" class=\"container\">\n",
         "        <h2>Edit Index</h2>\n",
@@ -1625,6 +1689,11 @@
         "        loadTerms(); // Reload the terms list\n",
         "      }\n",
         "\n",
+        "function toggleLinksPerPageVisibility() {\n",
+        "  const linksPerPageContainer = document.getElementById('linksPerPageContainer');\n",
+        "  linksPerPageContainer.style.display = 'block'; // Change 'show' to 'block'\n",
+        "}\n",
+        "\n",
         "      function changeFontSize(action) {\n",
         "        const body = document.body;\n",
         "        const currentSize = parseInt(window.getComputedStyle(body).fontSize);\n",
@@ -1634,6 +1703,7 @@
         "        } else if (action === \"decrease\") {\n",
         "          body.style.fontSize = `${Math.max(currentSize - 2, 10)}px`;\n",
         "        }\n",
+        "\n",
         "      // Initially load terms when the page loads\n",
         "      window.onload = function () {\n",
         "        loadTerms();\n",
@@ -1649,26 +1719,5 @@
         "HTML(html_code)"
       ]
     }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.11.2"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 2
+  ]
 }
