--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -3,27 +3,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/amir3x0/Cloud-Project-Nvidia/blob/main/frontend/hw2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/amir3x0/Cloud-Project-Nvidia/blob/main/hw2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "mIk-LPykCRwE",
-        "outputId": "d71e32c8-90aa-41b1-e2c9-30313fd27e3b"
+        "outputId": "5929f1bf-3add-4e9d-a219-bdf19c9aeb84"
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "<!DOCTYPE html>\r\n",
               "<html lang=\"en\">\r\n",
@@ -35,7 +39,10 @@
               "      rel=\"stylesheet\"\r\n",
               "      href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css\"\r\n",
               "    />\r\n",
-              "    <link rel=\"stylesheet\" href=\"style.css\" />\r\n",
+              "    <link\r\n",
+              "      rel=\"stylesheet\"\r\n",
+              "      href=\"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\"\r\n",
+              "    />\r\n",
               "    <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js\"></script>\r\n",
               "    <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js\"></script>\r\n",
               "    <script>\r\n",
@@ -177,16 +184,12 @@
               "      </div>\r\n",
               "    </div>\r\n",
               "\r\n",
-              "    <script src=\"script.js\"></script>\r\n",
+              "    <script src=\"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"></script>\r\n",
               "  </body>\r\n",
               "</html>\r\n"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ],
       "source": [
@@ -211,9 +214,8 @@
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyMzEZzV12MLIruBjM9gSnxc",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
