update github pages urls

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/amir3x0/Cloud-Project-Nvidia/blob/main/hw2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -23,11 +23,7 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "<!DOCTYPE html>\r\n",
               "<html lang=\"en\">\r\n",
@@ -187,9 +183,13 @@
               "    <script src=\"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"></script>\r\n",
               "  </body>\r\n",
               "</html>\r\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -205,7 +205,10 @@
         "# Ensure the request was successful\n",
         "if response.status_code == 200:\n",
         "    html_content = response.text\n",
-        "    # Display the HTML content (statically, without JavaScript execution)\n",
+        "    github_pages_css_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\"\n",
+        "    html_content = html_content.replace(\"style.css\", github_pages_css_url)\n",
+        "    github_pages_js_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"\n",
+        "    html_content = html_content.replace(\"script.js\", github_pages_js_url)\n",
         "    display(HTML(html_content))\n",
         "else:\n",
         "    print(f\"Failed to fetch the page: {response.status_code}\")"
@@ -214,8 +217,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
