--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -47,9 +47,9 @@
         "# Ensure the request was successful\n",
         "if response.status_code == 200:\n",
         "    html_content = response.text\n",
-        "    github_pages_css_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\"\n",
+        "    github_pages_css_url = \"https://github.com/amir3x0/Cloud-Project-Nvidia/blob/search-enable-titles/style.css\"\n",
         "    html_content = html_content.replace(\"style.css\", github_pages_css_url)\n",
-        "    github_pages_js_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"\n",
+        "    github_pages_js_url = \"https://github.com/amir3x0/Cloud-Project-Nvidia/blob/search-enable-titles/script.js\"\n",
         "    html_content = html_content.replace(\"script.js\", github_pages_js_url)\n",
         "    display(HTML(html_content))\n",
         "else:\n",
