--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -20,7 +20,7 @@
         "from IPython.display import HTML\n",
         "\n",
         "# The URL of your GitHub Pages site\n",
-        "url = 'https://amir3x0.github.io/Cloud-Project-Nvidia/index.html'\n",
+        "url = 'https://github.com/amir3x0/Cloud-Project-Nvidia/tree/add-title/index.html'\n",
         "\n",
         "# Fetch the page content\n",
         "response = requests.get(url)\n",
@@ -28,9 +28,9 @@
         "# Ensure the request was successful\n",
         "if response.status_code == 200:\n",
         "    html_content = response.text\n",
-        "    github_pages_css_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\"\n",
+        "    github_pages_css_url = \"https://github.com/amir3x0/Cloud-Project-Nvidia/tree/add-title/style.css\"\n",
         "    html_content = html_content.replace(\"style.css\", github_pages_css_url)\n",
-        "    github_pages_js_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"\n",
+        "    github_pages_js_url = \"https://github.com/amir3x0/Cloud-Project-Nvidia/tree/add-title/script.js\"\n",
         "    html_content = html_content.replace(\"script.js\", github_pages_js_url)\n",
         "\n",
         "    display(HTML(html_content))\n",
