--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -30,7 +30,7 @@
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x23aa9088e90>"
+              "<IPython.lib.display.IFrame at 0x180a8be3910>"
             ]
           },
           "metadata": {},
@@ -68,7 +68,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.2"
+      "version": "3.11.3"
     }
   },
   "nbformat": 4,
