remove fake data

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/amir3x0/Cloud-Project-Nvidia/blob/main/hw2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,22 +12,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 1,
       "metadata": {
-        "id": "qadiYD0EfPSd",
-        "outputId": "1f985d18-779d-4093-a63d-768e38f9067c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "qadiYD0EfPSd",
+        "outputId": "1f985d18-779d-4093-a63d-768e38f9067c"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "<!DOCTYPE html>\r\n",
               "<html lang=\"en\">\r\n",
@@ -172,9 +168,13 @@
               "</body>\r\n",
               "\r\n",
               "</html>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -208,8 +208,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -225,7 +225,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.2"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
